; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_pl061.c_pl061_irq_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_pl061.c_pl061_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pl061_gpio = type { i32, i32, i64 }

@GPIOIE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @pl061_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pl061_irq_enable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pl061_gpio*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call %struct.pl061_gpio* @get_irq_chip_data(i32 %7)
  store %struct.pl061_gpio* %8, %struct.pl061_gpio** %3, align 8
  %9 = load i32, i32* %2, align 4
  %10 = load %struct.pl061_gpio*, %struct.pl061_gpio** %3, align 8
  %11 = getelementptr inbounds %struct.pl061_gpio, %struct.pl061_gpio* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = sub i32 %9, %12
  store i32 %13, i32* %4, align 4
  %14 = load %struct.pl061_gpio*, %struct.pl061_gpio** %3, align 8
  %15 = getelementptr inbounds %struct.pl061_gpio, %struct.pl061_gpio* %14, i32 0, i32 1
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @spin_lock_irqsave(i32* %15, i64 %16)
  %18 = load %struct.pl061_gpio*, %struct.pl061_gpio** %3, align 8
  %19 = getelementptr inbounds %struct.pl061_gpio, %struct.pl061_gpio* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @GPIOIE, align 8
  %22 = add nsw i64 %20, %21
  %23 = call i32 @readb(i64 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %4, align 4
  %25 = shl i32 1, %24
  %26 = load i32, i32* %6, align 4
  %27 = or i32 %26, %25
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.pl061_gpio*, %struct.pl061_gpio** %3, align 8
  %30 = getelementptr inbounds %struct.pl061_gpio, %struct.pl061_gpio* %29, i32 0, i32 2
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @GPIOIE, align 8
  %33 = add nsw i64 %31, %32
  %34 = call i32 @writeb(i32 %28, i64 %33)
  %35 = load %struct.pl061_gpio*, %struct.pl061_gpio** %3, align 8
  %36 = getelementptr inbounds %struct.pl061_gpio, %struct.pl061_gpio* %35, i32 0, i32 1
  %37 = load i64, i64* %5, align 8
  %38 = call i32 @spin_unlock_irqrestore(i32* %36, i64 %37)
  ret void
}

declare dso_local %struct.pl061_gpio* @get_irq_chip_data(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @readb(i64) #1

declare dso_local i32 @writeb(i32, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
